Trying to fix fonts on mobile again

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: "icomoon";
+  font-family: "icomoon", "Fira Code";
   src: url("../fonts/icomoon/icomoon.eot?srf3rx");
   src: url("../fonts/icomoon/icomoon.eot?srf3rx#iefix")
       format("embedded-opentype"),
@@ -16,7 +16,7 @@
 *
 * ======================================================= */
 body {
-  font-family: "Montserrat";
+  font-family: "Fira Code";
   font-weight: 200;
   font-size: 16px;
   line-height: 1.5;
@@ -60,7 +60,7 @@ h4,
 h5,
 h6 {
   color: #fff;
-  font-family: "Montserrat";
+  font-family: "Fira Code";
   font-weight: 400;
   margin: 0 0 30px 0;
 }
